--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Apka pogodowa</title>
         
